Fixed content overflow #6

--- a/src/components/like-button/like-button.sass
+++ b/src/components/like-button/like-button.sass
@@ -1,7 +1,10 @@
 @import '../../styles/variables.sass'
   
 .like-button
-  width: 40px
+  min-width: 40px
+  max-width: 100%
+  width: fit-content
+  overflow: hidden
   height: 20px
   box-sizing: border-box
   border: 1px solid $dark-shade-25
